웹팩 설정 마무리
1. 웹팩 설정을 dev,prod 변수로 나눈다
2. 코드스플릿팅 - printMe함수 테스트한다
3. 이후 서버사이드 랜더링을 express로 서버를 띄워서 테스트해본다

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="shortcut icon" href="favicon.ico" />
         <meta
             name="viewport"
             content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"
@@ -10,7 +9,5 @@
         <meta name="description" content="Test project : Webpack SSR" />
         <title>Webpack SSR Test : Asset Management</title>
     </head>
-    <body>
-        <script src="dist/bundle.js"></script>
-    </body>
+    <body></body>
 </html>
