custom webpack & add express web server

--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,7 @@
         <meta name="description" content="Test project : Webpack SSR" />
         <title>Webpack SSR Test : Asset Management</title>
     </head>
-    <body></body>
+    <body>
+        <div id="root"></div>
+    </body>
 </html>
